Defailt styles + default navbar

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,1 +1,11 @@
-<p>navbar works!</p>
+<div class="nav-container">
+  <img class="logo" alt="logo">
+  <div class="links">
+    <a class="link">Accueil</a>
+    <a class="link">A propos</a>
+    <a class="link">Projets</a>
+    <a class="link">Technos</a>
+    <a class="link">Me contacter</a>
+  </div>
+</div>
+
