--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
-<app-navbar></app-navbar>
-<app-header></app-header>
-<app-aboutme></app-aboutme>
-<app-projects></app-projects>
-<app-technologies></app-technologies>
-<app-contacts></app-contacts>
+<div class="app-container">
+  <app-navbar></app-navbar>
+  <app-header></app-header>
+  <app-aboutme></app-aboutme>
+  <app-projects></app-projects>
+  <app-technologies></app-technologies>
+  <app-contacts></app-contacts>
+</div>
