Sticky nav + logo

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,7 @@
 <div class="nav-container">
-  <img class="logo" alt="logo">
+  <div class="logo-container">
+    <img class="logo" src="../../assets/images/terrible-logo.png" alt="logo">
+  </div>
   <div class="links">
     <a class="link">Accueil</a>
     <a class="link">A propos</a>
