--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,15 +1,29 @@
 .nav-container {
   position: sticky;
-  width: 100vw;
-  background-color: var(--secondary-color);
+  top: 0px;
+  width: 100%;
+  height: 8vh;
+  background-color: var(--tertiary-color);
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
 }
 
-.logo {
+.logo-container {
+  margin-left: 20px;
+  border-radius: 50%;
+  transition: 300ms ease-in-out;
+  cursor: pointer;
+  padding: 7px;
+}
 
+.logo-container:hover {
+  background-color: var(--background-color);
+}
+
+.logo {
+  height: 5vh;
 }
 
 .links {
@@ -18,7 +32,8 @@
   justify-content: flex-end;
   gap: 5px;
   align-items: center;
-  margin-right: 5px;
+  margin-right: 20px;
+  font-weight: bold;
 }
 
 .link {
@@ -35,5 +50,6 @@
 }
 
 .link:hover {
-  background-color: var(--tertiary-color);
+  background-color: var(--background-color);
+  color: var(--text-color);
 }
