Basic header structure

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,6 @@
-<p>header works!</p>
+<div class="header-container">
+    <div class="content">
+        <h1 class="welcome">Bienvenue sur mon E-Portfolio</h1>
+        <h3>Je suis développeur : <span class="dynamic-text"> {{ tech }} </span></h3>
+    </div>
+</div>
