Refacto css navbar

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,8 @@
-<p>header works!</p>
+<link href="//db.onlinewebfonts.com/c/a0cb693c715aaf804e67963c4d0d4d90?family=ModeSeven" rel="stylesheet" type="text/css"/>
+<div class="header-container">
+    <div class="content">
+      <span class="border-anim"></span>
+      <h1 class="welcome">Bienvenue sur mon E-Portfolio</h1>
+      <h3>Je suis développeur : <span class="dynamic-text"> {{ tech }} </span></h3>
+    </div>
+</div>
