--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -11,7 +11,7 @@
 }
 
 .logo-container {
-  margin-left: 20px;
+  width: 10%;
   border-radius: 50%;
   transition: 300ms ease-in-out;
   cursor: pointer;
@@ -27,26 +27,27 @@
 }
 
 .links {
+  width: 90%;
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
   gap: 5px;
   align-items: center;
-  margin-right: 20px;
+  margin-right: 2%;
   font-weight: bold;
 }
 
 .link {
-  padding: 0 10px;
-  min-width: 75px;
+  padding: 0 1%;
+  max-width: 20%;
   height: 40px;
   border-radius: 15px;
   transition: 300ms ease-in-out;
-  margin: 15px 0;
   cursor: pointer;
   display: flex;
   justify-content: center;
   align-items: center;
+  font-size: 75%;
 }
 
 .link:hover {
