--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -4,10 +4,10 @@
   </div>
   <div class="links">
     <a class="link">Accueil</a>
-    <a class="link">A propos</a>
+    <a class="link">A&nbsp;propos</a>
     <a class="link">Projets</a>
     <a class="link">Technos</a>
-    <a class="link">Me contacter</a>
+    <a class="link">Me&nbsp;contacter</a>
   </div>
 </div>
 
