--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -12,17 +12,18 @@
 
 .logo-container {
   width: 10%;
-  border-radius: 50%;
   transition: 300ms ease-in-out;
   cursor: pointer;
   padding: 7px;
 }
 
-.logo-container:hover {
+.logo:hover {
   background-color: var(--background-color);
 }
 
 .logo {
+  padding: 5%;
+  border-radius: 50%;
   height: 5vh;
 }
 
@@ -47,7 +48,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 75%;
+  font-size: 0.8em;/*75%;*/
 }
 
 .link:hover {
