About me progress

--- a/src/app/aboutme/aboutme.component.html
+++ b/src/app/aboutme/aboutme.component.html
@@ -1,1 +1,15 @@
-<p>aboutme works!</p>
+<div class="aboutme-container">
+  <div class="aboutme-text-container">
+    <div class="aboutme-text">
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores at doloribus dolorum eligendi est et eveniet
+        fuga labore nesciunt, non nulla perferendis, placeat qui quia recusandae sed tempora, vero voluptates!
+      </p>
+      <p>
+        Dolor quae quam velit. A ad aliquid assumenda ea eos esse est impedit iusto maiores minima modi officia, quaerat
+        quam qui quo quos recusandae sunt tempore voluptas voluptatibus? Hic, voluptatem!
+      </p>
+    </div>
+  </div>
+  <div class="aboutme-image"></div>
+</div>
