--- a/src/app/aboutme/aboutme.component.html
+++ b/src/app/aboutme/aboutme.component.html
@@ -1,3 +1,4 @@
+<app-mouse-trailer></app-mouse-trailer>
 <div class="aboutme-container">
   <div class="aboutme-text-container">
     <div class="aboutme-text">
