--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,5 @@
 <link href="//db.onlinewebfonts.com/c/a0cb693c715aaf804e67963c4d0d4d90?family=ModeSeven" rel="stylesheet" type="text/css"/>
+<app-mouse-trailer></app-mouse-trailer>
 <div class="header-container">
     <div class="content">
       <h1 class="welcome">Bienvenue sur mon E-Portfolio</h1>
