--- a/src/app/aboutme/aboutme.component.css
+++ b/src/app/aboutme/aboutme.component.css
@@ -1,6 +1,7 @@
 .aboutme-container {
   height: 92vh;
-  width: 96%;
+  width: 90vw;
+  margin: auto;
   border-radius: 50px;
   background-color: var(--secondary-color);
   display: flex;
@@ -36,9 +37,6 @@
 .aboutme-text p:hover {
   -webkit-transform: scale(1.2);
 }
-
-
-
 
 .aboutme-image {
   width: 30%;
