Projects (+ refacto mouse trailer)

--- a/src/app/mouse-trailer/mouse-trailer.component.html
+++ b/src/app/mouse-trailer/mouse-trailer.component.html
@@ -1,4 +1,6 @@
 <div id="mouse-trailer">
-  <div id="mouse-blur"></div>
-  <div id="mouse-bg"></div>
+  <div id="sticky-container">
+    <div id="mouse-blur"></div>
+    <div id="mouse-bg"></div>
+  </div>
 </div>
