--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="app-container">
   <app-navbar></app-navbar>
+  <app-mouse-trailer></app-mouse-trailer>
   <app-header></app-header>
   <app-aboutme></app-aboutme>
   <app-projects></app-projects>
