--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,1 +1,3 @@
-<p>projects works!</p>
+<div class="projects-container">
+    <app-project *ngFor="let project of projects" [project]="project"></app-project>
+</div>
