--- a/src/styles.css
+++ b/src/styles.css
@@ -13,12 +13,27 @@ body {
   font-family: 'league-spartan', sans-serif;
 }
 
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline; 
+  cursor: pointer;  
+}
+
+
 p {
   color: var(--text-color);
 
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   color: var(--title-color);
 }
 
