--- a/src/app/projects/project/project.component.html
+++ b/src/app/projects/project/project.component.html
@@ -2,12 +2,7 @@
     <a [href]="project.html_url">
         <h4>{{ project.name }}</h4>
     </a>
-    <p *ngFor="let language of project.languages">{{ language.name }} - {{ language.share }}%</p>
-
-    <canvas *ngIf="project.languages != undefined && project.languages.length > 0 " baseChart class="chart" 
-        [data]="pieChartData" 
-        [type]="pieChartType" 
-        [options]="pieChartOptions">
-    </canvas>
-
+    <div class="languages">
+        <p *ngFor="let language of project.languages" class="language">{{ language.name }} - {{ language.share }}%</p>
+    </div>
 </div>
