--- a/src/app/projects/project/project.component.scss
+++ b/src/app/projects/project/project.component.scss
@@ -8,23 +8,42 @@
     border: 2px solid transparent;
 }
 
+.languages {
+    width: fit-content;
+    padding: 1vh 1vw;
+    transition: 200ms;
+}
+
+.language {
+    font-weight: bold;
+    color: var(--text-color);
+}
+
 .project-container:hover {
-    scale:1.1;
+    scale: 1.1;
     border-color: var(--title-color);
     color: transparent !important;
-    background: linear-gradient(
-        135deg, 
-        var(--tertiary-color),
-        transparent,
-        var(--tertiary-color), 
-        transparent,
-        transparent);
+    background: linear-gradient(135deg,
+            var(--tertiary-color),
+            transparent,
+            var(--tertiary-color),
+            transparent,
+            transparent);
     background-size: 200% 200%;
     background-position: 100% 50%;
     animation: backgroundRotation 2.5s;
+
+    .languages {
+        filter: brightness(0.3);
+    }
 }
 
 @keyframes backgroundRotation {
-    0%{background-position:100% 0%}
-    100%{background-position:100% 50%}
+    0% {
+        background-position: 100% 0%
+    }
+
+    100% {
+        background-position: 100% 50%
+    }
 }
