--- a/src/app/projects/project/project.component.scss
+++ b/src/app/projects/project/project.component.scss
@@ -8,6 +8,11 @@
     border: 2px solid transparent;
 }
 
+.project-name {
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 .languages {
     width: fit-content;
     padding: 1vh 1vw;
