--- a/src/app/technologies/technologies.component.html
+++ b/src/app/technologies/technologies.component.html
@@ -1,7 +1,7 @@
 <div class="technologies-container">
-    <figure *ngFor="let technology of technologies">
-        <img [src]="technology.image_src" [alt]="technology.name">
-        <figcaption>{{ technology.name }}</figcaption>
+    <figure *ngFor="let technology of technologies" class="technology"> 
+        <!-- [style]="getBackgroundUrl(technology)" class="technology" > -->
+        <img [src]="technology.image_src" [alt]="technology.name" class="technology-image">
+        <figcaption class="technology-title">{{ technology.name }}</figcaption>
     </figure>
-
 </div>
