--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -1,6 +1,6 @@
 .projects-container {
     padding-top: 5%;
-    width: 90vw;
+    width: 90%;
     margin: auto;
     display: flex;
     flex-direction: row;
