--- a/src/app/aboutme/aboutme.component.scss
+++ b/src/app/aboutme/aboutme.component.scss
@@ -3,11 +3,17 @@
   width: 90vw;
   margin: auto;
   border-radius: 50px;
-  background-color: var(--secondary-color);
+  background-color: transparent; //var(--tertiary-color);
+  border: 2px solid white;
+  padding: 2%;
+}
+
+.flex-container {
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding: 2%;
+  width: 100%;
+  height: 90%;
 }
 
 .aboutme-text-container {
