--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -2,10 +2,14 @@
     padding-top: 5%;
     width: 90vw;
     margin: auto;
+}
+
+.flex-container {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
+    width: 100%;
     gap: 3vw;
-}
+  }
