--- a/src/app/technologies/technologies.component.scss
+++ b/src/app/technologies/technologies.component.scss
@@ -2,18 +2,22 @@
     padding-top: 5%;
     width: 90vw;
     margin: auto;
+}
+
+.flex-container {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
     flex-wrap: wrap;
     gap: 3vw;
+    width: 100%;
 }
 
 .technology {
     perspective: 20vw ;
-    width: 20vw;
-    height: 20vw;
+    width: 15%;
+    height: auto;
     border-radius: 15px;
     position: relative;
     border: 2px solid transparent;
